--- a/css/home.css
+++ b/css/home.css
@@ -6,79 +6,48 @@
 .cover {
 height:100%;
 max-width: 100vw;
-display: flex;
+display: grid;
 z-index: 1;
 order: 2;
 overflow: hidden;
 }
     .coverLeft {
-    width: 60%;
+    width: 70%;
     height: 100%;
-    padding-top: 200px;
+    padding: 30px 0px;
     display: grid;
-    text-align: left;
-    align-content: start;
+    margin: 0px auto;
+    text-align: center;
+    justify-content: center;
     z-index: 5;
     }
         
         #text1 {
-        align-self: end;
-        font-size: 52px;
+        font-size: 54px;
         font-weight: bold;
-        color: #fff;
-        text-shadow: 3px 3px 0 #0F0F15;                  
+        color: #1a1a1d;
+        text-shadow: 3px 3px 0 #d6d5e2;                  
         }
 
         #text2 {
-        align-self: start;
-        font-size: 29px;
+        font-size: 36px;
         font-weight: normal;
-        color:#fff;
+        color:#1a1a1d;
             
         }
-
-        .wrapper {
-        display: flex;
-        align-self: flex-start;
-        justify-self: center;
-        max-width: 100%;
-        }
-
-            .socials {
-            display: flex;
-            margin-top: 10px;
-
-            }
-
-            .socials a {
-            padding: 10px 20px;                       
-            }
-
-            .socials i {
-            color: #D1ADB0;;
-            font-size: 30px;
-            font-weight: 700;
-            transition: all 0.4s; 
-            }
-
-            .socials i:hover {
-            color: #ac4f55;
-            transform: scale(1.1);
-            }
-            
-
+          
     .coverRight {
     margin: 0px;
-    width: 60%;
+    width: 100%;
     height: 100%;
     display: grid;
-    justify-content: end;
+    justify-content: center;
     z-index: 3;
     }
-    
+
     .coverRight img {
-    max-height: 700px;
-    align-self: start;
+        content: url('../img/putra.png');
+        transform: translateX(1%);
     }
 
 section {
@@ -102,14 +71,14 @@ section {
             justify-self: center;
             width: 90%;
             font-size: 48px;
-            color: #D1ADB0;
+            color: #1a1a1d;
             font-weight: bold;
-            text-shadow: 3px 3px 0 #0F0F15;
+            text-shadow: 3px 3px 0 #d6d5e2;
         }
 
         .headerThis h3 {
             justify-self: center;
-            color: #fff;
+            color: #1a1a1d;
             font-size: 24px;
             width: 70%;
             font-weight: lighter;
@@ -126,10 +95,11 @@ section {
 
         .boxThis {
             display: grid;
-            background: #171721;
-            padding: 25px 25px;
+            background: #e3e2f2;
+            padding: 40px 25px;
             margin: 10px auto;
-            box-shadow: 4px 4px 0 #0F0F15;
+            box-shadow: 4px 4px 0 #d6d5e2;
+            border-radius: 20px;
             max-width: 300px;
             min-height: 380px;
             align-content: space-between;
@@ -138,28 +108,24 @@ section {
         }
 
         .boxThis:hover {
-            background: #13131c;
+            transform: translateY(2%);
         }
 
         .boxThis i {
-            color: #D1ADB0;
-            font-size: 52px;
+            color: #1a1a1d;
+            font-size: 58px;
             transition: all 0.4s; 
         }
 
-        .boxThis i:hover {
-            transform: scale(1.2);
-        }
-
         .boxThis h2 {
-            color: #fff;
+            color: #1a1a1d;
             font-size: 24px;
             font-weight: bold;
         }
 
         .boxThis p {
             font-size: 14px;
-            color: #fff;
+            color: #1a1a1d;
             font-weight: lighter;
         }
 
@@ -168,19 +134,18 @@ section {
             align-content: center;
             cursor: pointer;
             text-decoration: none;
-            width: 91px;
-            height: 27px;            
+            width: 100px;
+            height: 30px;            
             font-size: 12px;
-            color: #fff;
-            background: #ac4f55;
+            font-weight: 500;
+            color: #F2F2FF;
+            background: #c3073f;
             border: none;
-            box-shadow: 3px 3px 0 #0F0F15;
             transition: all 0.4s; 
         }
 
         .boxThis a:hover {
-            background: #933f42;
-            transform: scale(1.05);
+            background: #b20a3a;
         }
 
     .aboutMe {
@@ -199,14 +164,14 @@ section {
             justify-self: center;
             width: 90%;
             font-size: 48px;
-            color: #D1ADB0;
+            color: #1a1a1d;
             font-weight: bold;
-            text-shadow: 3px 3px 0 #0F0F15;
+            text-shadow: 3px 3px 0 #d6d5e2;
         }
 
         .headerMe h3 {
             justify-self: center;
-            color: #fff;
+            color: #1a1a1d;
             font-size: 24px;
             width: 100%;
             font-weight: lighter;
@@ -226,13 +191,26 @@ section {
         margin: 10px auto;
         max-height: 300px;
         max-width: 300px;
-        filter: drop-shadow(4px 4px 0px #0F0F15);
+        filter: drop-shadow(4px 4px 0px #d6d5e2);
+        border-radius: 20px;
         transition: all 0.4s; 
     }
 
     .bodyMe img:hover {
-        transform: scale(1.1);
+        transform: translateY(2%);
     }
+
+        .me1 {
+            content: url('../img/aboutme1.jpg');
+        }
+
+        .me2 {
+            content: url('../img/aboutme2.jpg');
+        }
+
+        .me3 {
+            content: url('../img/aboutme3.jpg');
+        }
 
     .footMe {
         padding: 20px 0px;
@@ -241,17 +219,17 @@ section {
     }
 
     .footMe p {
-        color: #fff;
+        color: #1a1a1d;
         font-size: 22px;
         font-weight: normal;
         padding-bottom: 20px;
     }
     
     .footMe b {
-        color: #ac4f55;
+        color: #c3073f;
         font-size: 22px;
         font-weight: bold;
-        text-shadow: 3px 3px 0 #0F0F15;
+        text-shadow: 3px 3px 0 #d6d5e2;
     }
 
 .contact {
@@ -269,14 +247,14 @@ section {
         .headerContact h1 {
             justify-self: center;
             font-size: 48px;
-            color: #D1ADB0;
+            color: #1a1a1d;
             font-weight: bold;
-            text-shadow: 3px 3px 0 #0F0F15;
+            text-shadow: 3px 3px 0 #d6d5e2;
         }
 
         .headerContact h3 {
             justify-self: center;
-            color: #fff;
+            color: #1a1a1d;
             font-size: 24px;
             width: 100%;
             font-weight: lighter;
@@ -297,65 +275,58 @@ section {
         }
 
         .form-control {
-                color: #fff;
-                background: #171721;
-                box-shadow: 4px 4px 0 #0F0F15;
+                color: #1a1a1d;
+                background: #e3e2f2;
+                box-shadow: 4px 4px 0 #d6d5e2;
                 height: 70px;
                 width: 100%;
                 border: none;
                 margin-bottom: 20px;
                 padding: 0px 20px;
+                border-radius: 10px;
                 outline: none;
                 transition: all 0.4s;
             }
 
-            .form-control:hover {
-                background: #13131c;
-            }
 
             .form-control::placeholder {
-                color: #fff;
+                color: #1a1a1d;
             }
 
             .form-control:focus {
                 transform: scale(1.01);
-                background: #13131c;
             }
 
             .form-message {
-                color: #fff;
-                background: #171721;
-                box-shadow: 4px 4px 0 #0F0F15;
+                color: #1a1a1d;
+                background: #e3e2f2;
+                box-shadow: 4px 4px 0 #d6d5e2;
                 height: 200px;
                 width: 100%;
                 border: none;
                 margin-bottom: 10px;
                 padding:20px 20px;
+                border-radius: 10px;
                 outline: none;
                 transition: all 0.4s;
-                resize: none;
-            }
-
-            .form-message:hover {
-                background: #13131c;
+                resize: vertical;
             }
 
             .form-message::placeholder {
-                color: #fff;
+                color: #1a1a1d;
             }
 
             .form-message:focus {
                 transform: scale(1.01);
-                background: #13131c;
             }
 
             .formContact button {
                 cursor: pointer;
                 color: #fff;
-                background: #ac4f55;
-                box-shadow: 4px 4px 0 #0F0F15;
+                background: #c3073f;
                 height: 50px;
-                width: 100px;
+                width: 120px;
+                font-weight: 500;
                 float: right;
                 outline: none;
                 border: none;
@@ -363,8 +334,7 @@ section {
             }
 
             .formContact button:hover {
-                background: #933f42;
-                transform: scale(1.05);
+                background: #b20a3a;
             }
 
 @media (max-width: 780px) {
@@ -376,7 +346,6 @@ section {
         width: 100%;
         text-align: center;
         align-content: center;
-        margin-top: -60px;    
     }
 
     .socials {
@@ -385,14 +354,14 @@ section {
     }
 
     .coverRight {
-        width: 95vw;
+        width: 100%;
         justify-content: center;
+        overflow: hidden;
     }
 
     .coverRight img {
-        margin-top: -60px;
-        transform: translateX(5vw);
-        
+        content: url('../img/putra2.png');
+        width: 100%;
     }
 
 }
